# jepax

./: .gitignore  README.md  pyproject.toml
configs/: imagenet.yaml
docs/: ijepa_masking_explained.md
experiments/: train_ijepa.py
jepax/: config.py  masks.py
jepax/data/: __init__.py  datasets.py
jepax/model/: __init__.py  ijepa.py  masker.py  transformer.py  vit.py
jepax/test/: test_vit.py
jepax/train/: __init__.py  train_vit.py
notebooks/: data_patch.ipynb  ijepa_core_ops.ipynb  masking_visualization.ipynb
notebooks/components/: data_patch.ipynb
test/: test_transformer_components.py  test_vit.py
