[project]
name = "jepax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aim>=3.29.1",
    "equinox>=0.13.2",
    "flax>=0.12.1",
    "jax>=0.8.1",
    "jaxlib>=0.8.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "optax>=0.2.6",
    "pytest>=9.0.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
